--- a/scl/input/oclContraintsTests/SCL/InvalidReleaseValueInSCL.conf.json
+++ b/scl/input/oclContraintsTests/SCL/InvalidReleaseValueInSCL.conf.json
@@ -1,5 +1,5 @@
 {
-    "ocl": ["RequiredAttributes/SCL.ocl"],
+    "ocl": ["FileSpecifics", "RequiredAttributes", "RequiredElements", "SemanticConstraints"],
     "make-explicit-links": 1,
     "do-not-display-copyright": 1
 }
